--- a/index.html
+++ b/index.html
@@ -578,7 +578,8 @@
             
             <!-- LEFT: IMAGES -->
             <div class="relative h-auto bg-stone-950 flex flex-col p-6 lg:p-8 gap-6 lg:order-1 justify-center border-r border-bronze-900/30">
-                <div class="relative overflow-hidden group rounded-2xl shadow-2xl border border-bronze-700/40 aspect-video lg:aspect-auto lg:h-80">
+                <!-- ÄNDERUNG: aspect-square statt aspect-video und max-width hinzugefügt für gute Proportionen -->
+                <div class="relative overflow-hidden group rounded-2xl shadow-2xl border border-bronze-700/40 aspect-square w-full max-w-sm mx-auto">
                     <div class="absolute inset-0 bg-gradient-to-t from-stone-900 to-transparent opacity-30 z-10 transition-opacity group-hover:opacity-10"></div>
                     <!-- .webp ersetzt & lazy -->
                     <img src="start.webp" alt="Starter Paket" class="w-full h-full object-cover object-center transition-transform duration-700 group-hover:scale-105" loading="lazy" decoding="async">
@@ -973,7 +974,7 @@
                     <div class="flex justify-between items-end mb-4">
                         <div>
                             <p class="text-[10px] text-stone-500 uppercase tracking-widest mb-0.5">Exklusives Investment</p>
-                            <div class="text-3xl md:text-4xl font-black text-white leading-none">29.999 €</div>
+                            <div class="text-3xl md:text-4xl font-black text-white leading-none">49.999 €</div>
                             <p class="text-[9px] text-stone-500 mt-0.5">oder auf Anfrage</p>
                         </div>
                         <div class="text-right hidden md:block">
