--- a/index.html
+++ b/index.html
@@ -321,28 +321,28 @@
             50% { transform: translate(-50%, -50%) scale(1.05); opacity: 0.08; }
         }
 
-        /* PLATINUM PATTERN (Emblemed Out - Diamonds) */
+        /* PLATINUM PATTERN (Emblemed Out - Diamonds) - SICHTBARER */
         #view-platinum::before {
             content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            /* SVG Diamant Pattern - Transparenz reduziert (0.05 stroke opacity) */
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 24 24' fill='none' stroke='rgba(226, 232, 240, 0.05)' stroke-width='1' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M6 3h12l4 6-10 13L2 9z'/%3E%3Cpath d='M11 3 8 9l4 13 4-13-3-6'/%3E%3Cpath d='M2 9h20'/%3E%3C/svg%3E");
+            /* SVG Diamant Pattern - Transparenz erhöht (0.15 stroke opacity) */
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 24 24' fill='none' stroke='rgba(226, 232, 240, 0.15)' stroke-width='1' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M6 3h12l4 6-10 13L2 9z'/%3E%3Cpath d='M11 3 8 9l4 13 4-13-3-6'/%3E%3Cpath d='M2 9h20'/%3E%3C/svg%3E");
             background-repeat: repeat;
             background-size: 60px 60px;
             z-index: -1;
             pointer-events: none;
-            opacity: 0.4; /* Gesamtopazität reduziert */
+            opacity: 0.6; /* Gesamtopazität erhöht */
         }
 
-        /* GOLD PATTERN (Emblemed Out - Crown) */
+        /* GOLD PATTERN (Emblemed Out - Crown) - SICHTBARER */
         #view-gold::before {
             content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            /* SVG Crown Pattern - Geändert von Coins zu Crown */
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 24 24' fill='none' stroke='rgba(252, 211, 77, 0.08)' stroke-width='1' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m2 4 3 12h14l3-12-6 7-4-7-4 7-6-7zm3 16h14'/%3E%3C/svg%3E");
+            /* SVG Crown Pattern - Transparenz erhöht (0.2 stroke opacity) */
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' viewBox='0 0 24 24' fill='none' stroke='rgba(252, 211, 77, 0.2)' stroke-width='1' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='m2 4 3 12h14l3-12-6 7-4-7-4 7-6-7zm3 16h14'/%3E%3C/svg%3E");
             background-repeat: repeat;
             background-size: 60px 60px;
             z-index: -1;
             pointer-events: none;
-            opacity: 0.4; /* Dezent im Hintergrund */
+            opacity: 0.6; /* Gesamtopazität erhöht */
         }
 
         /* INFINITY BACKGROUND (Animated Gradient) */
@@ -361,28 +361,31 @@
         #view-infinity::before {
             content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
             background-image: 
-                radial-gradient(white, rgba(255,255,255,.4) 2px, transparent 3px),
-                radial-gradient(white, rgba(255,255,255,.3) 1px, transparent 2px),
-                radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 3px);
+                radial-gradient(white, rgba(255,255,255,.5) 2px, transparent 3px),
+                radial-gradient(white, rgba(255,255,255,.4) 1px, transparent 2px),
+                radial-gradient(white, rgba(255,255,255,.3) 2px, transparent 3px);
             background-size: 550px 550px, 350px 350px, 250px 250px;
             background-position: 0 0, 40px 60px, 130px 270px;
-            opacity: 0.6;
+            opacity: 0.7;
             z-index: -1;
             animation: stars-move 100s linear infinite;
         }
         @keyframes stars-move { from { transform: translateY(0); } to { transform: translateY(-1000px); } }
 
-        /* INFINITY SPARKLE (Extra layer) */
+        /* INFINITY SPARKLE (Extra layer - MEHR FUNKEN) */
         #view-infinity::after {
             content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            /* Mehr Layer für mehr Dichte */
             background-image: 
+                radial-gradient(white, rgba(255,255,255,.8) 1px, transparent 2px),
+                radial-gradient(white, rgba(255,255,255,.6) 1px, transparent 2px),
                 radial-gradient(white, rgba(255,255,255,.6) 1px, transparent 2px),
                 radial-gradient(white, rgba(255,255,255,.4) 1px, transparent 2px);
-            background-size: 400px 400px, 200px 200px;
-            background-position: 20px 20px, 150px 150px;
-            animation: twinkle 4s infinite alternate;
+            background-size: 400px 400px, 200px 200px, 300px 300px, 250px 250px;
+            background-position: 20px 20px, 150px 150px, 50px 80px, 100px 20px;
+            animation: twinkle 3s infinite alternate;
             z-index: -1;
-            opacity: 0.8;
+            opacity: 1;
             pointer-events: none;
         }
         @keyframes twinkle { 0% { opacity: 0.4; transform: scale(0.8); } 100% { opacity: 1; transform: scale(1.2); } }
