--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
             <footer>
                 <img src="logo_weiß.webp" alt="Logo" class="footer-logo" loading="lazy" decoding="async">
                 <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/florian.merzenich_official/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.youtube.com/@FlorianMerzenich" target="_blank"><i class="fa-brands fa-youtube"></i></a>
                 </div>
                 <p><a href="#" id="impressum-link">Impressum</a> | <a href="#" id="datenschutz-link">Datenschutz</a></p>
@@ -834,7 +834,7 @@
                             <!-- Streichpreis -->
                             <div class="line-through text-mentoring-500 text-3xl font-bold mb-1 opacity-60">899 €</div>
                             <!-- Preis -->
-                            <div class="text-5xl md:text-6xl font-black text-white leading-none">399 €</div>
+                            <div class="text-5xl md:text-6xl font-black text-white leading-none">499 €</div>
                             <p class="text-[9px] text-stone-500 mt-0.5">zzgl. gesetzl. MwSt.</p>
                         </div>
                         <div class="text-right hidden md:block">
